--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "coffee --map -o lib -c src",
+    "test": "npm run build && node lib/tests/main"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cnd": "^4.5.0",
     "pipedreams": "^7.1.0"
+  },
+  "devDependencies": {
+    "guy-test": "^1.4.0"
   }
 }
