fix test script definition

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "coffee --map -o lib -c src",
-    "test": "npm run build && node lib/tests/main"
+    "test": "npm run build && node lib/tests/main.test.js"
   },
   "author": "",
   "license": "ISC",
