--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "intercourse",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "YeSQL-like utlity to treat files as archives of hunks of functionality descriptions",
   "main": "lib/main.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "coffee --map -o lib -c src",
-    "test": "npm run build && node lib/tests/main.test.js"
+    "test": "npm run build && node lib/tests/main.test.js",
+    "build": "coffee --map -o lib -c src"
   },
   "author": "",
   "license": "ISC",
