--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "cnd": "^4.5.0",
-    "pipedreams": "^7.1.1"
+    "intertype": "^2.3.0",
+    "pipedreams": "^7.6.1"
   },
   "devDependencies": {
     "guy-test": "^1.4.0"
