--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cnd": "^4.6.0",
-    "intertype": "^2.5.0",
-    "pipedreams": "^12.1.0"
+    "cnd": "9.2.1",
+    "intertype": "7.6.3",
+    "pipedreams": "12.1.1"
   },
   "devDependencies": {
-    "guy-test": "^1.4.0"
+    "guy-test": "4.0.1"
   }
 }
